@@ -1,3 +1,5 @@
+- Improvement: Update blueRecord forms filled algorithm. blue record redirector has a bottleneck for students to login.
+
 6.14.0 (08-05-2020)
 - Refactor: Moved HelpDesk to fenixedu-base
 - Refactor: Moved UsernameSequenceGenerator to fenixedu-base
